--- a/assets/css/Desktop_overviewUI.css
+++ b/assets/css/Desktop_overviewUI.css
@@ -1,3 +1,12 @@
+/* TODO move to another file */
+.btn-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0%;
+    top: 0%;
+}
+
 /* used for overview and subset view */
 /* placeholder */
 .home-btn {
