--- a/assets/css/Mobile_overlayUI.css
+++ b/assets/css/Mobile_overlayUI.css
@@ -117,13 +117,15 @@
     max-height: var(--ring-arrow-size-max);
     /* width: 68px; */
     /* height: 76px; */
+    padding: 0px;
     border-color: rgba(0, 0, 0, 0);
 }
 
 #ring-control-left{
-    /* left: var(--ring-ctrl-padding-x); */
-    left: 200px;
-    /* background: var(--left-arrow-icon-url);
+    left: var(--ring-ctrl-padding-x);
+    /* left: 200px; */
+    /* background: var(--left-arrow-icon-url); */
+    /*
     background-size: 100%, 100%;
     -o-background-size: 100%, 100%;
     -moz-background-size: 100%, 100%;
@@ -131,20 +133,19 @@
     background-repeat: no-repeat;
     background-position: center; */
     background-color: cyan;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 #ring-control-right{
-    right: 200px;
-    /* right: var(--ring-ctrl-padding-x); */
-    background: var(--right-arrow-icon-url);
+    /* right: 200px; */
+    right: var(--ring-ctrl-padding-x);
+    /* background: var(--right-arrow-icon-url);
     background-size: 100%, 100%;
     -o-background-size: 100%, 100%;
     -moz-background-size: 100%, 100%;
     -webkit-background-size: 100%, 100%;
     background-repeat: no-repeat;
-    background-position: center;    z-index: -1;
-
+    background-position: center;    z-index: -1; */
 }
 
 /* hide extra elem from desktop */
